# yarac

./: .gitignore  Doxyfile  Makefile.am  README  README.md  configure.ac  configure~
.github/: README.md
.github/workflows/: builds_tests.yml  codeql.yml  linux_like_os_builds_ci.yml  makefile.yml
examples/: hello_world.yara  log.yara  test.yara  test2.yara  test3.yara  test4.yara  test5.yara  test6.yara  test7.yara  test8.yara
examples/module/: main.yara  math.yara  std.yara
include/: cli.h  config.h.in  containers.h  lexer.h  linker.h  location.h  logger.h  parser.h  rtm.h  todo.inl  types.h
include/debug/: utils.h
obsolete/: .run_tests.sh  CMakeLists.txt  Makefile
sandbox/free/: .run.sh  main.c  main.s  test.txt
sandbox/gnucabs/: Makefile.am  autogen.sh  configure.ac
sandbox/gnucabs/include/: config.h.in  vec.h
sandbox/gnucabs/source/: main.c  vec.c
sandbox/gnucabs/tests/: Makefile.am  test.c
sandbox/hashmap/: CMakeLists.txt  main.c  map.h  run.sh
sandbox/linking/: .run.sh  main.c  main.s  vec2.c
sandbox/tester/: tester.py
sandbox/tester/tests/: first.c
scripts/: tests.sh
source/: cli.c  containers.c  lexer.c  linker.c  logger.c  main.c  parser.c  rtm.c  types.c
tests/include/: unit_tester.h
tests/include/samples/: comments.uth  comments.yara  decorators.uth  decorators.yara  identifiers.uth  identifiers.yara  intrinsics.uth  intrinsics.yara  invalids.uth  invalids.yara  keywords.uth  keywords.yara  lexer_benchmark.uth  literals.uth  literals.yara
tests/source/: main.c  unit_tester.c
