
# The yarac target
bin_PROGRAMS = gnucabs

# Yarac sources
gnucabs_SOURCES =
gnucabs_SOURCES += \
	$(top_srcdir)/include/vec.h \
	$(top_srcdir)/source/vec.c \
	$(top_srcdir)/source/main.c

# Yarac compiler flags
gnucabs_CFLAGS = 
gnucabs_CFLAGS += -std=gnu11 -Wall -Wextra -Wpedantic -Werror -Wshadow \
	-I$(top_srcdir)/include

# Yarac C/C++ preprocessor flags
gnucabs_CPPFLAGS = 

# Yarac linker flags
gnucabs_LDFLAGS =
